# routes.js
@@ -30,6 +30,7 @@ module.exports = function (app) {
   app.get('/tournaments/:id/matches', (req, res) => tournamentController.getMatches(req, res));
   app.post('/tournaments/:id/matches', (req, res) => tournamentController.createMatch(req, res));
   app.patch('/tournaments/:id/matches/:match_id', (req, res) => tournamentController.updateMatch(req, res));
+  app.post('/tournaments/:id/matches/:match_id/correct', (req, res) => tournamentController.correctMatchResult(req, res));
 
   // Leagues
   app.post('/tournaments/:id/league', (req, res) => tournamentController.endTournament(req, res));
